# siquery-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  azure-pipelines.yaml
.github/workflows/: rust.yml
examples/: sysinfo.rs
fuzz/fuzz_targets/: fuzz_target_1.rs
powershell/: .gitignore  build.ps1
powershell/pester/: EXE_SchemaValidation.Tests.ps1  JSON_SchemaValidation.Tests.ps1  etc_hosts.Tests.ps1  etc_protocols.Tests.ps1  etc_services.Tests.ps1  groups.Tests.ps1  interface_address.Tests.ps1  interface_details.Tests.ps1  logged_in_users.Tests.ps1  logical_drives.Tests.ps1  logon_sessions.Tests.ps1  os_version.Tests.ps1  process_memory_map.Tests.ps1  process_open_sockets.Tests.ps1  processes.Tests.ps1  products.Tests.ps1  proxies.Tests.ps1  system_info.Tests.ps1  uptime.Tests.ps1  users.Tests.ps1  wmi_bios.Tests.ps1  wmi_computer_info.Tests.ps1  wmi_hotfixes.Tests.ps1  wmi_keyboard.Tests.ps1  wmi_local_accounts.Tests.ps1  wmi_monitors.Tests.ps1  wmi_motherboard.Tests.ps1  wmi_network_adapters.Tests.ps1  wmi_os_version.Tests.ps1  wmi_physical_memory.Tests.ps1  wmi_pointing_device.Tests.ps1  wmi_printers.Tests.ps1  wmi_processor.Tests.ps1  wmi_products.Tests.ps1  wmi_services.Tests.ps1  wmi_shares.Tests.ps1  wmi_sound.Tests.ps1  wmi_start_up.Tests.ps1  wmi_time_zone.Tests.ps1  wmi_video.Tests.ps1
powershell/schema/: os_version.json  processes.json  uptime.json
powershell/siquery/: siquery.psd1  siquery.psm1
siquery/: Cargo.toml  build.rs
siquery/fuzz/: Cargo.toml
siquery/fuzz/fuzz_targets/: fuzz_etc_hosts.rs  fuzz_etc_protocols.rs  fuzz_etc_services.rs  fuzz_system_info.rs  fuzz_wmi_computer_info.rs  fuzz_wmi_hotfixes.rs  fuzz_wmi_keyboard.rs  fuzz_wmi_local_accounts.rs  fuzz_wmi_motherboard.rs  fuzz_wmi_network_adapters.rs  fuzz_wmi_os_version.rs  fuzz_wmi_physical_memory.rs  fuzz_wmi_pointing_device.rs  fuzz_wmi_printers.rs  fuzz_wmi_processor.rs  fuzz_wmi_services.rs  fuzz_wmi_shares.rs  fuzz_wmi_sound.rs  fuzz_wmi_video.rs
siquery/src/: html.rs  inventory.rs  lib.rs  printer.rs  query.rs  tables.rs  utils.rs  vtab.rs
siquery/src/common/: hosts.rs  protocols.rs  services.rs
siquery/src/linux/: groups.rs  interface_address.rs  interface_details.rs  logged_in_users.rs  logical_drive.rs  mod.rs  mounts.rs  os_version.rs  process_open_sockets.rs  processes.rs  proxies.rs  system_info.rs  uptime.rs  users.rs
siquery/src/macos/: groups.rs  launchd.rs  launchd_overrides.rs  logged_in_users.rs  logical_drive.rs  mod.rs  mounts.rs  os_version.rs  process_envs.rs  processes.rs  proxies.rs  system_info.rs  uptime.rs  users.rs
siquery/src/windows/: groups.rs  interface_address.rs  interface_details.rs  logged_in_users.rs  logical_drive.rs  logon_sessions.rs  mod.rs  os_version.rs  process_memory_map.rs  process_open_sockets.rs  processes.rs  products.rs  proxies.rs  system_info.rs  uptime.rs  users.rs  wmi_bios.rs  wmi_computer_info.rs  wmi_hotfixes.rs  wmi_keyboard.rs  wmi_local_accounts.rs  wmi_monitors.rs  wmi_motherboard.rs  wmi_network_adapters.rs  wmi_os_version.rs  wmi_physical_memory.rs  wmi_pointing_device.rs  wmi_printers.rs  wmi_processor.rs  wmi_products.rs  wmi_services.rs  wmi_shares.rs  wmi_sound.rs  wmi_start_up.rs  wmi_time_zone.rs  wmi_video.rs
siquery/test_data/: cpuinfo.txt  hosts.txt  os-release.txt  wmi-cpuinfo.txt  wmi-network-adapters.txt  wmi-nicconfig-details.txt  wmi-os-version.txt  wmi-osinfo.txt  wmi-physical-memory.txt  wmi-pointing-device.txt  wmi-services.txt
siquery_cli/: Cargo.toml
siquery_cli/src/: cli.yml  inventory.inv  main.rs  vtab.rs
siquery_tables/: Cargo.toml  build.rs
siquery_tables/fuzz/: Cargo.toml
siquery_tables/fuzz/fuzz_targets/: fuzz_etc_protocols.rs  fuzz_target_1.rs  fuzz_wmi_computer_info.rs  fuzz_wmi_hotfixes.rs  fuzz_wmi_keyboard.rs  fuzz_wmi_local_accounts.rs  fuzz_wmi_monitors.rs  fuzz_wmi_os_version.rs  fuzz_wmi_pointing_device.rs  fuzz_wmi_services.rs  fuzz_wmi_shares.rs  fuzz_wmi_sound.rs  fuzz_wmi_video.rs
siquery_tables/src/: errors.rs  html.rs  inventory.rs  json.rs  lib.rs  printer.rs  query.rs  table_printer.rs  tables.rs  utils.rs  vtab.rs
siquery_tables/src/common/: hosts.rs  mod.rs  protocols.rs  services.rs
siquery_tables/src/linux/: groups.rs  interface_address.rs  interface_details.rs  logged_in_users.rs  logical_drive.rs  mod.rs  mounts.rs  os_version.rs  process_open_sockets.rs  processes.rs  proxies.rs  system_info.rs  uptime.rs  users.rs
siquery_tables/src/macos/: groups.rs  launchd.rs  launchd_overrides.rs  logical_drive.rs  mod.rs  mounts.rs  os_version.rs  process_envs.rs  processes.rs  proxies.rs  system_info.rs  uptime.rs  users.rs
siquery_tables/src/windows/: groups.rs  interface_address.rs  interface_details.rs  logged_in_users.rs  logical_drive.rs  logon_sessions.rs  mod.rs  os_version.rs  printers.rs  process_memory_map.rs  process_open_sockets.rs  processes.rs  products.rs  proxies.rs  system_info.rs  uptime.rs  uptime_info.rs  users.rs  wmi_bios.rs  wmi_computer_info.rs  wmi_hotfixes.rs  wmi_hotfixs.rs  wmi_keyboard.rs  wmi_local_accounts.rs  wmi_monitors.rs  wmi_motherboard.rs  wmi_network_adapters.rs  wmi_os_version.rs  wmi_physical_memory.rs  wmi_pointing_device.rs  wmi_printers.rs  wmi_processor.rs  wmi_products.rs  wmi_services.rs  wmi_shares.rs  wmi_sound.rs  wmi_start_up.rs  wmi_video.rs
siquery_tables/test_data/: SystemVersion.plist  preferences.plist  services.txt  wmi-bios.txt  wmi-computerinfo.txt  wmi-driveinfo.txt  wmi-hotfixes.txt  wmi-keyboard.txt  wmi-local-accounts.txt  wmi-monitors.txt  wmi-motherboard-info.txt  wmi-network-adapters.txt  wmi-nicconfig.txt  wmi-osinfo.txt  wmi-printers.txt  wmi-processor.txt  wmi-shares.txt  wmi-sound.txt  wmi-system-info.txt  wmi-video.txt
src/: lib.rs  tables.rs  utils.rs
src/common/: hosts.rs  mod.rs  (+2 more)
sysconf.rs/: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.sh  appveyor.yml
sysconf.rs/src/: lib.rs  raw.rs
sysconf.rs/src/page/: hugepage.rs  mod.rs
test_data/: hosts.txt  meminfo.txt  protocols.txt  wmi-computerinfo.txt  wmi-osinfo.txt
(+35 files in other folders)
