[package]
name = "siquery"
version = "1.2.5"
edition = "2021"
readme = "../README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/siquery-rs"
repository = "https://github.com/devolutions/siquery-rs"
authors = ["Sébastien Duquette <sduquette@devolutions.net>"]
description = "siquery, a Rust osquery implementation to query system information"
keywords = ["query", "system", "information", "osquery"]
build = "build.rs"

[dependencies]
cfg-if = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1.0.0"
lazy_static = "1.0.0"
time = "^0.1"
csv = "^1.0"
prettytable-rs = "0.10"
treexml = "0.7.0"
heck = "0.3.1"
chrono = "0.4.6"
horrorshow = "0.6.5"
url = "2"

[target.'cfg(target_os = "linux")'.dependencies]
uname = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies.sysconf]
version = "0.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
uname = "0.1.1"
byteorder = "1.2.3"
objc = {version = "~0.2.5", features = ["exception"]}
objc-foundation = "0.1.1"
objc_id = "0.1.1"
plist = "0.4"
walkdir = "2.2.7"
glob = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.5.1"
winapi =  { version = "~0.3.6", features = ["sddl","handleapi","winnt", "minwindef", "ws2def", "errhandlingapi", "winbase","objidlbase", "tlhelp32", "shlobj", "memoryapi", "psapi", "winerror","lmaccess", "ntddscsi","securitybaseapi","lmapibuf", "ntlsa"] }
libc = "0.2"
widestring = "0.4"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
nix = "0.11.0"

[dependencies.rusqlite]
version = "0.28"
features = ["vtab", "bundled"]

[dependencies.proxy_cfg]
version = "0.4"
