[package]
name = "siquery_cli"
version = "0.1.0"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>"]

[[bin]]
name = "siquery"
path = "src/main.rs"

[dependencies]
prettytable-rs = "^0.6"
clap = { version = "2.31", features = ["yaml"] }
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1.40"

[dependencies.siquery]
path = "../siquery_tables"
