[package]
name = "siquery_cli"
version = "1.2.1"
edition = "2018"
readme = "../README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/siquery-rs"
repository = "https://github.com/devolutions/siquery-rs"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>"]
description = "siquery, a Rust osquery implementation to query system information"
keywords = ["query", "system", "information", "osquery"]

[[bin]]
name = "siquery"
path = "src/main.rs"

[dependencies]
prettytable-rs = "^0.6"
clap = { version = "2.31", features = ["yaml"] }
lazy_static = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1.40"

[dependencies.siquery]
path = "../siquery"
version = "1.2.1"
