[package]
name = "siquery"
version = "0.1.0"
authors = ["Sébastien Duquette <sduquette@devolutions.net>"]
build = "build.rs"

[dependencies]
cfg-if = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1.0.0"
lazy_static = "1.0.0"
time = "^0.1"
csv = "^1.0"
prettytable-rs = "^0.6"

[target.'cfg(target_os = "linux")'.dependencies]
uname = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies.sysconf]
version = "0.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
uname = "0.1.1"
byteorder = "1.2.3"
objc = {version = "~0.2.5", features = ["exception"]}
objc-foundation = "0.1.1"
objc_id = "0.1.1"
fnv = "1.0.6"
url = "1.5"
plist = "0.3.0"

[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = "0.2"
winreg = "0.5.1"
winapi =  { version = "~0.3.6", features = ["sddl","handleapi","winnt", "minwindef", "ws2def", "errhandlingapi", "winbase","objidlbase", "tlhelp32", "shlobj", "memoryapi", "psapi", "winerror","lmaccess", "ntddscsi","securitybaseapi","lmapibuf", "ntlsa"] }
libc = "0.2"
widestring = "0.4"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
nix = "0.11.0"

[dependencies.rusqlite]
version = "^0.14"
features = ["vtab", "bundled"]

[dependencies.proxy_config]
version = "0.0.2"
git = "https://github.com/Devolutions/proxy-config.git"
rev = "1c216a5"